--- a/traffic-light/src/app/traffic-light/traffic-light.component.html
+++ b/traffic-light/src/app/traffic-light/traffic-light.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="traffic-light">
   <app-circle color="red" [lightOn]="(isRed | async)"></app-circle>
   <app-circle color="yellow" [lightOn]="(isYellow | async)"></app-circle>
   <app-circle color="green" [lightOn]="(isGreen | async)"></app-circle>
